--- a/marzinho.html
+++ b/marzinho.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>corinthians campeao</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>que fase ta meu curintia comento ate galo frito</h1>
+    <p>que fase ta meu curintia comento ate galo frito</p>
 </body>
 </html>
