--- a/marzinho.html
+++ b/marzinho.html
@@ -14,7 +14,7 @@
     <h2>VENHA PARA MELHOR TRUFARIA DA CIDADE
     COM OS MELHORES PREÇOS DA CIDADE
      </h2>
-    
+     <center><img src="como-fazer-trufas-recheadas-para-vender.jpg" alt=""></center>
      <center>
      <table border="2">
         <tr>
@@ -60,6 +60,31 @@
 </tr>
      </table>
 </center>
+<center><h1>A seguir jao cria da trufa </h1></center>
+<center><img src="jao cria da trufa.jpg" alt=""></center>
+<center><table border="3"><tr><td>trufas secretas</td>
+<td>peso</td>
+<td>preço</td></tr>
+<tr>
+<td>camarao</td>
+<td>100g</td>
+<td>R$30,00</td>
+</tr>
+<tr>
+    <td>miojo</td>
+    <td>100g</td>
+    <td>R$20,00</td>
+    </tr>
+    <tr>
+        <td>feijoada</td>
+        <td>300g</td>
+        <td>R$50,00</td></tr>
+        <tr>
+            <td>prato feito</td>
+            <td>500g</td>
+            <td>R$70,00</td>
+            </tr>
+        </table></center>
     
 </body>
 </html>
